test/scc_test/stmt/semantic-errors/045.t
void test()
{
    if (1); else continue;
}